--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/navigation_home"
+        android:id="@+id/navigation_call"
         android:icon="@drawable/ic_call"
         android:title="Call/Text" />
     <item
-        android:id="@+id/navigation_sms"
+        android:id="@+id/navigation_media"
         android:icon="@drawable/ic_search"
         android:title="Find us" />
 
