--- a/app/src/main/res/layout/activity_change_phone.xml
+++ b/app/src/main/res/layout/activity_change_phone.xml
@@ -51,33 +51,103 @@
             android:orientation="vertical"
             >
 
-            <EditText
-                android:id="@+id/old_phone"
+
+            <androidx.appcompat.widget.LinearLayoutCompat
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="old phone"
-                android:layout_marginTop="8dp"
-                android:textSize="12sp"
-                android:background="@drawable/edittext"
-                android:padding="8dp"
-                android:textColorHint="@color/colorPrimary"
-                android:textColor="@color/colorPrimary"
-                android:inputType="phone"/>
-            <EditText
-                android:id="@+id/new_phone"
+                android:orientation="horizontal"
+                android:layout_height="wrap_content">
+                <com.hbb20.CountryCodePicker
+                    android:id="@+id/ccp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:ccpDialog_allowSearch="true"
+                    app:ccpDialog_fastScroller_bubbleColor="@color/colorPrimaryDark"
+                    app:ccpDialog_fastScroller_handleColor="@color/colorPrimaryDark"
+                    app:ccpDialog_initialScrollToSelection="true"
+                    app:ccpDialog_keyboardAutoPopup="false"
+                    app:ccpDialog_showCloseIcon="true"
+                    app:ccpDialog_showFastScroller="false"
+                    app:ccpDialog_showPhoneCode="true"
+                    app:ccpDialog_showTitle="false"
+                    app:ccp_arrowColor="@color/colorPrimaryDark"
+                    app:ccp_autoDetectCountry="false"
+                    app:ccp_autoDetectLanguage="false"
+                    app:ccp_autoFormatNumber="false"
+                    app:ccp_clickable="true"
+                    app:ccp_countryPreference="KE"
+                    app:ccp_defaultNameCode="KE"
+                    app:ccp_hintExampleNumber="true"
+                    app:ccp_rememberLastSelection="true"
+                    app:ccp_selectionMemoryTag="signupCCP"
+                    app:ccp_showArrow="true"
+                    app:ccp_showFlag="true"
+                    app:ccp_showFullName="false"
+                    app:ccp_showNameCode="false"
+                    app:ccp_showPhoneCode="true"
+                    app:ccp_textGravity="RIGHT"/>
+                <EditText
+                    android:id="@+id/old_phone"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:hint="701234567"
+                    android:layout_marginTop="8dp"
+                    android:textSize="12sp"
+                    android:background="@drawable/edittext"
+                    android:padding="8dp"
+                    app:layout_constraintTop_toBottomOf="@id/email"
+                    android:textColorHint="@color/colorPrimary"
+                    android:textColor="@color/colorPrimary"
+                    android:inputType="phone"/>
+            </androidx.appcompat.widget.LinearLayoutCompat>
+            <androidx.appcompat.widget.LinearLayoutCompat
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="new phone"
-                android:layout_marginTop="8dp"
-                android:textSize="12sp"
-                android:background="@drawable/edittext"
-                android:padding="8dp"
-                app:layout_constraintTop_toBottomOf="@id/phone"
-                android:textColorHint="@color/colorPrimary"
-                android:textColor="@color/colorPrimary"
-                android:inputType="textPassword"/>
+                android:orientation="horizontal"
+                android:layout_height="wrap_content">
+                <com.hbb20.CountryCodePicker
+                    android:id="@+id/ccp2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:ccpDialog_allowSearch="true"
+                    app:ccpDialog_fastScroller_bubbleColor="@color/colorPrimaryDark"
+                    app:ccpDialog_fastScroller_handleColor="@color/colorPrimaryDark"
+                    app:ccpDialog_initialScrollToSelection="true"
+                    app:ccpDialog_keyboardAutoPopup="false"
+                    app:ccpDialog_showCloseIcon="true"
+                    app:ccpDialog_showFastScroller="false"
+                    app:ccpDialog_showPhoneCode="true"
+                    app:ccpDialog_showTitle="false"
+                    app:ccp_arrowColor="@color/colorPrimaryDark"
+                    app:ccp_autoDetectCountry="false"
+                    app:ccp_autoDetectLanguage="false"
+                    app:ccp_autoFormatNumber="false"
+                    app:ccp_clickable="true"
+                    app:ccp_countryPreference="KE"
+                    app:ccp_defaultNameCode="KE"
+                    app:ccp_hintExampleNumber="true"
+                    app:ccp_rememberLastSelection="true"
+                    app:ccp_selectionMemoryTag="signupCCP"
+                    app:ccp_showArrow="true"
+                    app:ccp_showFlag="true"
+                    app:ccp_showFullName="false"
+                    app:ccp_showNameCode="false"
+                    app:ccp_showPhoneCode="true"
+                    app:ccp_textGravity="RIGHT"/>
+                <EditText
+                    android:id="@+id/new_phone"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:hint="701234567"
+                    android:layout_marginTop="8dp"
+                    android:textSize="12sp"
+                    android:background="@drawable/edittext"
+                    android:padding="8dp"
+                    app:layout_constraintTop_toBottomOf="@id/email"
+                    android:textColorHint="@color/colorPrimary"
+                    android:textColor="@color/colorPrimary"
+                    android:inputType="phone"/>
+            </androidx.appcompat.widget.LinearLayoutCompat>
             <Button
-                android:id="@+id/login"
+                android:id="@+id/change"
                 android:layout_width="wrap_content"
                 android:layout_height="35dp"
                 android:layout_marginTop="10dp"
