--- a/app/src/main/res/layout/activity_code_verification.xml
+++ b/app/src/main/res/layout/activity_code_verification.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:padding="20dp"
     android:background="@drawable/p"
-    tools:context=".LoginActivity">
+    tools:context=".CodeVerification">
     <ImageView
         android:id="@+id/ic"
         app:layout_constraintStart_toStartOf="parent"
@@ -20,22 +20,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/ic"
-        android:text="iGrand LOGIN"
+        android:text="iGrand"
         android:textColor="@color/colorAccent"
         android:textStyle="bold"
         android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
-    <Button
-        android:id="@+id/go_sign_up"
-        android:layout_width="wrap_content"
-        android:layout_height="35dp"
-        android:text="Sign up"
-        android:textColor="@color/colorWhite"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/title"
-        android:background="@drawable/button"
-        android:textSize="12sp"/>
 
     <ProgressBar
         android:id="@+id/progress"
@@ -61,76 +51,28 @@
             android:orientation="vertical"
             >
 
-            <androidx.appcompat.widget.LinearLayoutCompat
-                android:layout_width="match_parent"
-                android:orientation="horizontal"
-                android:layout_height="wrap_content">
-                <com.hbb20.CountryCodePicker
-                    android:id="@+id/ccp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:ccpDialog_allowSearch="true"
-                    app:ccpDialog_fastScroller_bubbleColor="@color/colorPrimaryDark"
-                    app:ccpDialog_fastScroller_handleColor="@color/colorPrimaryDark"
-                    app:ccpDialog_initialScrollToSelection="true"
-                    app:ccpDialog_keyboardAutoPopup="false"
-                    app:ccpDialog_showCloseIcon="true"
-                    app:ccpDialog_showFastScroller="false"
-                    app:ccpDialog_showPhoneCode="true"
-                    app:ccpDialog_showTitle="false"
-                    app:ccp_arrowColor="@color/colorPrimaryDark"
-                    app:ccp_autoDetectCountry="false"
-                    app:ccp_autoDetectLanguage="false"
-                    app:ccp_autoFormatNumber="false"
-                    app:ccp_clickable="true"
-                    app:ccp_countryPreference="KE"
-                    app:ccp_defaultNameCode="KE"
-                    app:ccp_hintExampleNumber="true"
-                    app:ccp_rememberLastSelection="true"
-                    app:ccp_selectionMemoryTag="signupCCP"
-                    app:ccp_showArrow="true"
-                    app:ccp_showFlag="true"
-                    app:ccp_showFullName="false"
-                    app:ccp_showNameCode="false"
-                    app:ccp_showPhoneCode="true"
-                    app:ccp_textGravity="RIGHT"/>
-                <EditText
-                    android:id="@+id/phone"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:hint="701234567"
-                    android:layout_marginTop="8dp"
-                    android:textSize="12sp"
-                    android:background="@drawable/edittext"
-                    android:padding="8dp"
-                    app:layout_constraintTop_toBottomOf="@id/email"
-                    android:textColorHint="@color/colorPrimary"
-                    android:textColor="@color/colorPrimary"
-                    android:inputType="phone"/>
-            </androidx.appcompat.widget.LinearLayoutCompat>
             <EditText
-                android:id="@+id/password"
+                android:id="@+id/enter_code"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="password"
+                android:hint="code"
                 android:layout_marginTop="8dp"
                 android:textSize="12sp"
                 android:background="@drawable/edittext"
                 android:padding="8dp"
-                app:layout_constraintTop_toBottomOf="@id/phone"
                 android:textColorHint="@color/colorPrimary"
                 android:textColor="@color/colorPrimary"
-                android:inputType="textPassword"/>
+                android:inputType="number"/>
             <TextView
-                android:id="@+id/forgot_password"
+                android:id="@+id/resend_code"
                 android:layout_marginTop="8dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textColor="@color/colorPrimary"
                 app:layout_constraintStart_toStartOf="parent"
-                android:text="Forgot password?"/>
+                android:text="Resend code"/>
             <Button
-                android:id="@+id/login"
+                android:id="@+id/confirm"
                 android:layout_width="wrap_content"
                 android:layout_height="35dp"
                 android:layout_marginTop="10dp"
@@ -140,7 +82,7 @@
                 android:background="@drawable/button"
                 android:textColor="@color/colorWhite"
                 android:textSize="12sp"
-                android:text="Log in"/>
+                android:text="Confirm"/>
         </androidx.appcompat.widget.LinearLayoutCompat>
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
