--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -27,6 +27,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
     <Button
+        android:id="@+id/go_to_login"
         android:layout_width="wrap_content"
         android:layout_height="35dp"
         android:text="Login"
@@ -73,19 +74,54 @@
             android:textColorHint="@color/colorPrimary"
             android:textColor="@color/colorPrimary"
             android:inputType="textEmailAddress"/>
-        <EditText
-            android:id="@+id/phone"
+        <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="phone"
-            android:layout_marginTop="8dp"
-            android:textSize="12sp"
-            android:background="@drawable/edittext"
-            android:padding="8dp"
-            app:layout_constraintTop_toBottomOf="@id/email"
-            android:textColorHint="@color/colorPrimary"
-            android:textColor="@color/colorPrimary"
-            android:inputType="phone"/>
+            android:orientation="horizontal"
+            android:layout_height="wrap_content">
+            <com.hbb20.CountryCodePicker
+                android:id="@+id/ccp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:ccpDialog_allowSearch="true"
+                app:ccpDialog_fastScroller_bubbleColor="@color/colorPrimaryDark"
+                app:ccpDialog_fastScroller_handleColor="@color/colorPrimaryDark"
+                app:ccpDialog_initialScrollToSelection="true"
+                app:ccpDialog_keyboardAutoPopup="false"
+                app:ccpDialog_showCloseIcon="true"
+                app:ccpDialog_showFastScroller="false"
+                app:ccpDialog_showPhoneCode="true"
+                app:ccpDialog_showTitle="false"
+                app:ccp_arrowColor="@color/colorPrimaryDark"
+                app:ccp_autoDetectCountry="false"
+                app:ccp_autoDetectLanguage="false"
+                app:ccp_autoFormatNumber="false"
+                app:ccp_clickable="true"
+                app:ccp_countryPreference="KE"
+                app:ccp_defaultNameCode="KE"
+                app:ccp_hintExampleNumber="true"
+                app:ccp_rememberLastSelection="true"
+                app:ccp_selectionMemoryTag="signupCCP"
+                app:ccp_showArrow="true"
+                app:ccp_showFlag="true"
+                app:ccp_showFullName="false"
+                app:ccp_showNameCode="false"
+                app:ccp_showPhoneCode="true"
+                app:ccp_textGravity="RIGHT"/>
+            <EditText
+                android:id="@+id/phone"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:hint="701234567"
+                android:layout_marginTop="8dp"
+                android:textSize="12sp"
+                android:background="@drawable/edittext"
+                android:padding="8dp"
+                app:layout_constraintTop_toBottomOf="@id/email"
+                android:textColorHint="@color/colorPrimary"
+                android:textColor="@color/colorPrimary"
+                android:inputType="phone"/>
+        </androidx.appcompat.widget.LinearLayoutCompat>
+
     <EditText
         android:id="@+id/password"
         android:layout_width="match_parent"
@@ -122,6 +158,7 @@
         app:layout_constraintTop_toBottomOf="@id/confirm_password"
         android:text="By signing up,you agree to our terms of service"/>
     <Button
+        android:id="@+id/signup"
         android:layout_width="wrap_content"
         android:layout_height="35dp"
         android:layout_marginTop="10dp"
