--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -41,66 +41,69 @@
     <ScrollView
         android:id="@+id/scroll"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="256dp"
         app:layout_constraintTop_toBottomOf="@id/title">
+
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:orientation="vertical"
-            >
+            android:orientation="vertical">
 
             <EditText
                 android:id="@+id/old_pass"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="old password"
                 android:layout_marginTop="8dp"
-                android:textSize="12sp"
                 android:background="@drawable/edittext"
+                android:hint="old password"
+                android:inputType="textPassword"
                 android:padding="8dp"
-                android:textColorHint="@color/colorPrimary"
                 android:textColor="@color/colorPrimary"
-                android:inputType="phone"/>
+                android:textColorHint="@color/colorPrimary"
+                android:textSize="12sp" />
+
             <EditText
                 android:id="@+id/new_password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="new password"
                 android:layout_marginTop="8dp"
-                android:textSize="12sp"
                 android:background="@drawable/edittext"
+                android:hint="new password"
+                android:inputType="textPassword"
                 android:padding="8dp"
-                app:layout_constraintTop_toBottomOf="@id/phone"
-                android:textColorHint="@color/colorPrimary"
                 android:textColor="@color/colorPrimary"
-                android:inputType="textPassword"/>
+                android:textColorHint="@color/colorPrimary"
+                android:textSize="12sp"
+                app:layout_constraintTop_toBottomOf="@id/phone" />
+
             <EditText
                 android:id="@+id/confirm_new"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="new password"
                 android:layout_marginTop="8dp"
-                android:textSize="12sp"
                 android:background="@drawable/edittext"
+                android:hint="new password"
+                android:inputType="textPassword"
                 android:padding="8dp"
-                app:layout_constraintTop_toBottomOf="@id/phone"
-                android:textColorHint="@color/colorPrimary"
                 android:textColor="@color/colorPrimary"
-                android:inputType="textPassword"/>
+                android:textColorHint="@color/colorPrimary"
+                android:textSize="12sp"
+                app:layout_constraintTop_toBottomOf="@id/phone" />
+
             <Button
-                android:id="@+id/login"
+                android:id="@+id/change"
                 android:layout_width="wrap_content"
                 android:layout_height="35dp"
                 android:layout_marginTop="10dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/terms_of_service"
                 android:background="@drawable/button"
+                android:text="change"
                 android:textColor="@color/colorWhite"
                 android:textSize="12sp"
-                android:text="change"/>
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/terms_of_service" />
         </androidx.appcompat.widget.LinearLayoutCompat>
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
