--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,8 +12,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
         android:src="@drawable/icon"/>
     <TextView
         android:id="@+id/title"
@@ -23,48 +23,36 @@
         android:text="iGrand LOGIN"
         android:textColor="@color/colorAccent"
         android:textStyle="bold"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
-    <Button
-        android:id="@+id/go_sign_up"
-        android:layout_width="wrap_content"
-        android:layout_height="35dp"
-        android:text="Sign up"
-        android:textColor="@color/colorWhite"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/title"
-        android:background="@drawable/button"
-        android:textSize="12sp"/>
 
-    <ProgressBar
-        android:id="@+id/progress"
-        android:background="@drawable/progress"
-        android:layout_width="30dp"
-        android:visibility="gone"
-        app:layout_constraintBottom_toTopOf="@id/scroll"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:padding="5dp"
-        android:layout_height="30dp" />
 
     <ScrollView
         android:id="@+id/scroll"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="228dp"
         app:layout_constraintTop_toBottomOf="@id/title">
+
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:orientation="vertical"
-            >
+            android:orientation="vertical">
+
+            <ProgressBar
+                android:id="@+id/progress"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:background="@drawable/progress"
+                android:padding="5dp"
+                android:visibility="gone" />
 
             <androidx.appcompat.widget.LinearLayoutCompat
                 android:layout_width="match_parent"
-                android:orientation="horizontal"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
                 <com.hbb20.CountryCodePicker
                     android:id="@+id/ccp"
                     android:layout_width="wrap_content"
@@ -93,54 +81,67 @@
                     app:ccp_showFullName="false"
                     app:ccp_showNameCode="false"
                     app:ccp_showPhoneCode="true"
-                    app:ccp_textGravity="RIGHT"/>
+                    app:ccp_textGravity="RIGHT" />
+
                 <EditText
                     android:id="@+id/phone"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:hint="701234567"
                     android:layout_marginTop="8dp"
-                    android:textSize="12sp"
                     android:background="@drawable/edittext"
+                    android:hint="701234567"
+                    android:inputType="phone"
                     android:padding="8dp"
-                    app:layout_constraintTop_toBottomOf="@id/email"
-                    android:textColorHint="@color/colorPrimary"
                     android:textColor="@color/colorPrimary"
-                    android:inputType="phone"/>
+                    android:textColorHint="@color/colorPrimary"
+                    android:textSize="12sp"
+                    app:layout_constraintTop_toBottomOf="@id/email" />
             </androidx.appcompat.widget.LinearLayoutCompat>
+
             <EditText
                 android:id="@+id/password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="password"
                 android:layout_marginTop="8dp"
-                android:textSize="12sp"
                 android:background="@drawable/edittext"
+                android:hint="password"
+                android:inputType="textPassword"
                 android:padding="8dp"
-                app:layout_constraintTop_toBottomOf="@id/phone"
-                android:textColorHint="@color/colorPrimary"
                 android:textColor="@color/colorPrimary"
-                android:inputType="textPassword"/>
+                android:textColorHint="@color/colorPrimary"
+                android:textSize="12sp"
+                app:layout_constraintTop_toBottomOf="@id/phone" />
+
             <TextView
                 android:id="@+id/forgot_password"
-                android:layout_marginTop="8dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:text="Forgot password?"
                 android:textColor="@color/colorPrimary"
-                app:layout_constraintStart_toStartOf="parent"
-                android:text="Forgot password?"/>
+                app:layout_constraintStart_toStartOf="parent" />
+
             <Button
                 android:id="@+id/login"
                 android:layout_width="wrap_content"
                 android:layout_height="35dp"
                 android:layout_marginTop="10dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/terms_of_service"
                 android:background="@drawable/button"
+                android:text="Log in"
                 android:textColor="@color/colorWhite"
                 android:textSize="12sp"
-                android:text="Log in"/>
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/terms_of_service" />
+
+            <TextView
+                android:id="@+id/go_sign_up"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="No account? Click to sign up"
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="12sp" />
         </androidx.appcompat.widget.LinearLayoutCompat>
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
