--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -12,8 +12,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
         android:src="@drawable/icon"/>
     <TextView
         android:id="@+id/title"
@@ -23,152 +23,157 @@
         android:text="iGrand Sign Up"
         android:textColor="@color/colorAccent"
         android:textStyle="bold"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
-    <Button
-        android:id="@+id/go_to_login"
-        android:layout_width="wrap_content"
-        android:layout_height="35dp"
-        android:text="Login"
-        android:textColor="@color/colorWhite"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/title"
-        android:background="@drawable/button"
-        android:textSize="12sp"/>
 
-        <ProgressBar
-            android:id="@+id/progress"
-            android:background="@drawable/progress"
-            android:layout_width="30dp"
-            android:visibility="gone"
-            app:layout_constraintBottom_toTopOf="@id/scroll"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:padding="5dp"
-            android:layout_height="30dp" />
 
     <ScrollView
         android:id="@+id/scroll"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="228dp"
         app:layout_constraintTop_toBottomOf="@id/title">
-    <androidx.appcompat.widget.LinearLayoutCompat
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="vertical"
-        >
 
-        <EditText
-            android:id="@+id/email"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="email"
-            android:textSize="12sp"
-            android:background="@drawable/edittext"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:padding="8dp"
-            android:textColorHint="@color/colorPrimary"
-            android:textColor="@color/colorPrimary"
-            android:inputType="textEmailAddress"/>
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
-            android:orientation="horizontal"
-            android:layout_height="wrap_content">
-            <com.hbb20.CountryCodePicker
-                android:id="@+id/ccp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:ccpDialog_allowSearch="true"
-                app:ccpDialog_fastScroller_bubbleColor="@color/colorPrimaryDark"
-                app:ccpDialog_fastScroller_handleColor="@color/colorPrimaryDark"
-                app:ccpDialog_initialScrollToSelection="true"
-                app:ccpDialog_keyboardAutoPopup="false"
-                app:ccpDialog_showCloseIcon="true"
-                app:ccpDialog_showFastScroller="false"
-                app:ccpDialog_showPhoneCode="true"
-                app:ccpDialog_showTitle="false"
-                app:ccp_arrowColor="@color/colorPrimaryDark"
-                app:ccp_autoDetectCountry="false"
-                app:ccp_autoDetectLanguage="false"
-                app:ccp_autoFormatNumber="false"
-                app:ccp_clickable="true"
-                app:ccp_countryPreference="KE"
-                app:ccp_defaultNameCode="KE"
-                app:ccp_hintExampleNumber="true"
-                app:ccp_rememberLastSelection="true"
-                app:ccp_selectionMemoryTag="signupCCP"
-                app:ccp_showArrow="true"
-                app:ccp_showFlag="true"
-                app:ccp_showFullName="false"
-                app:ccp_showNameCode="false"
-                app:ccp_showPhoneCode="true"
-                app:ccp_textGravity="RIGHT"/>
-            <EditText
-                android:id="@+id/phone"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:hint="701234567"
-                android:layout_marginTop="8dp"
-                android:textSize="12sp"
-                android:background="@drawable/edittext"
-                android:padding="8dp"
-                app:layout_constraintTop_toBottomOf="@id/email"
-                android:textColorHint="@color/colorPrimary"
-                android:textColor="@color/colorPrimary"
-                android:inputType="phone"/>
-        </androidx.appcompat.widget.LinearLayoutCompat>
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="vertical">
+            <ProgressBar
+                android:id="@+id/progress"
+                android:background="@drawable/progress"
+                android:layout_width="30dp"
+                android:visibility="gone"
+                app:layout_constraintBottom_toTopOf="@id/scroll"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:padding="5dp"
+                android:layout_height="30dp" />
 
-    <EditText
-        android:id="@+id/password"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="password"
-        android:layout_marginTop="8dp"
-        android:textSize="12sp"
-        android:background="@drawable/edittext"
-        android:padding="8dp"
-        app:layout_constraintTop_toBottomOf="@id/phone"
-        android:textColorHint="@color/colorPrimary"
-        android:textColor="@color/colorPrimary"
-        android:inputType="textPassword"/>
-    <EditText
-        android:id="@+id/confirm_password"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="confirm password"
-        android:layout_marginTop="8dp"
-        android:textSize="12sp"
-        android:background="@drawable/edittext"
-        android:padding="8dp"
-        app:layout_constraintTop_toBottomOf="@id/password"
-        android:textColorHint="@color/colorPrimary"
-        android:textColor="@color/colorPrimary"
-        android:inputType="textPassword"/>
-    <TextView
-        android:id="@+id/terms_of_service"
-        android:layout_marginTop="8dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textColor="@color/colorPrimary"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/confirm_password"
-        android:text="By signing up,you agree to our terms of service"/>
-    <Button
-        android:id="@+id/signup"
-        android:layout_width="wrap_content"
-        android:layout_height="35dp"
-        android:layout_marginTop="10dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/terms_of_service"
-        android:background="@drawable/button"
-        android:textColor="@color/colorWhite"
-        android:textSize="12sp"
-        android:text="Sign up"/>
-    </androidx.appcompat.widget.LinearLayoutCompat>
+            <EditText
+                android:id="@+id/email"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/edittext"
+                android:hint="email"
+                android:inputType="textEmailAddress"
+                android:padding="8dp"
+                android:layout_marginTop="5dp"
+                android:textColor="@color/colorPrimary"
+                android:textColorHint="@color/colorPrimary"
+                android:textSize="12sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <androidx.appcompat.widget.LinearLayoutCompat
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <com.hbb20.CountryCodePicker
+                    android:id="@+id/ccp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:ccpDialog_allowSearch="true"
+                    app:ccpDialog_fastScroller_bubbleColor="@color/colorPrimaryDark"
+                    app:ccpDialog_fastScroller_handleColor="@color/colorPrimaryDark"
+                    app:ccpDialog_initialScrollToSelection="true"
+                    app:ccpDialog_keyboardAutoPopup="false"
+                    app:ccpDialog_showCloseIcon="true"
+                    app:ccpDialog_showFastScroller="false"
+                    app:ccpDialog_showPhoneCode="true"
+                    app:ccpDialog_showTitle="false"
+                    app:ccp_arrowColor="@color/colorPrimaryDark"
+                    app:ccp_autoDetectCountry="false"
+                    app:ccp_autoDetectLanguage="false"
+                    app:ccp_autoFormatNumber="false"
+                    app:ccp_clickable="true"
+                    app:ccp_countryPreference="KE"
+                    app:ccp_defaultNameCode="KE"
+                    app:ccp_hintExampleNumber="true"
+                    app:ccp_rememberLastSelection="true"
+                    app:ccp_selectionMemoryTag="signupCCP"
+                    app:ccp_showArrow="true"
+                    app:ccp_showFlag="true"
+                    app:ccp_showFullName="false"
+                    app:ccp_showNameCode="false"
+                    app:ccp_showPhoneCode="true"
+                    app:ccp_textGravity="RIGHT" />
+
+                <EditText
+                    android:id="@+id/phone"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:background="@drawable/edittext"
+                    android:hint="701234567"
+                    android:inputType="phone"
+                    android:padding="8dp"
+                    android:textColor="@color/colorPrimary"
+                    android:textColorHint="@color/colorPrimary"
+                    android:textSize="12sp"
+                    app:layout_constraintTop_toBottomOf="@id/email" />
+            </androidx.appcompat.widget.LinearLayoutCompat>
+
+            <EditText
+                android:id="@+id/password"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:background="@drawable/edittext"
+                android:hint="password"
+                android:inputType="textPassword"
+                android:padding="8dp"
+                android:textColor="@color/colorPrimary"
+                android:textColorHint="@color/colorPrimary"
+                android:textSize="12sp"
+                app:layout_constraintTop_toBottomOf="@id/phone" />
+
+            <EditText
+                android:id="@+id/confirm_password"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:background="@drawable/edittext"
+                android:hint="confirm password"
+                android:inputType="textPassword"
+                android:padding="8dp"
+                android:textColor="@color/colorPrimary"
+                android:textColorHint="@color/colorPrimary"
+                android:textSize="12sp"
+                app:layout_constraintTop_toBottomOf="@id/password" />
+
+            <TextView
+                android:id="@+id/terms_of_service"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:text="By signing up,you agree to our terms of service"
+                android:textColor="@color/colorPrimary"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/confirm_password" />
+
+            <Button
+                android:id="@+id/signup"
+                android:layout_width="wrap_content"
+                android:layout_height="35dp"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/button"
+                android:text="Sign up"
+                android:textColor="@color/colorWhite"
+                android:textSize="12sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/terms_of_service" />
+
+            <TextView
+                android:id="@+id/go_to_login"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="Already have an account? Login"
+                android:textColor="@color/colorPrimary"
+                android:textSize="12sp" />
+        </androidx.appcompat.widget.LinearLayoutCompat>
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
