--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -11,16 +11,16 @@
         android:id="@+id/ic"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:src="@drawable/icon"/>
     <ImageView
         android:id="@+id/settings"
-        android:layout_width="wrap_content"
+        android:layout_width="30dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:src="@drawable/ic_settings"
-        android:layout_height="wrap_content" />
+        android:layout_height="30dp" />
     <ScrollView
         android:id="@+id/scroll"
         android:layout_width="match_parent"
