--- a/app/src/main/res/layout/activity_view_pdf.xml
+++ b/app/src/main/res/layout/activity_view_pdf.xml
@@ -6,4 +6,10 @@
     android:layout_height="match_parent"
     tools:context=".ViewPDF">
 
+    <com.github.barteksc.pdfviewer.PDFView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#9E9E9E"
+        android:id="@+id/pdfviewer"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
