--- a/app/src/main/res/layout/activity_change_phone.xml
+++ b/app/src/main/res/layout/activity_change_phone.xml
@@ -56,6 +56,11 @@
                 android:layout_width="match_parent"
                 android:orientation="horizontal"
                 android:layout_height="wrap_content">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_height="wrap_content"
+                    android:text="Old No:  "/>
                 <com.hbb20.CountryCodePicker
                     android:id="@+id/ccp"
                     android:layout_width="wrap_content"
@@ -103,6 +108,11 @@
                 android:layout_width="match_parent"
                 android:orientation="horizontal"
                 android:layout_height="wrap_content">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_height="wrap_content"
+                    android:text="New No: "/>
                 <com.hbb20.CountryCodePicker
                     android:id="@+id/ccp2"
                     android:layout_width="wrap_content"
