--- a/app/src/main/res/layout/list_layouts.xml
+++ b/app/src/main/res/layout/list_layouts.xml
@@ -2,16 +2,17 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:padding="5dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        app:cardCornerRadius="4dp"
-        android:layout_height="wrap_content">
+        app:cardCornerRadius="8dp"
+        android:layout_height="70dp">
         <androidx.appcompat.widget.LinearLayoutCompat
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:orientation="horizontal"
+            android:padding="8dp"
+            android:layout_gravity="center_vertical"
             android:layout_height="wrap_content">
             <RelativeLayout
                 android:layout_width="wrap_content"
@@ -43,4 +44,8 @@
                 android:text="The title of the content goes here"/>
         </androidx.appcompat.widget.LinearLayoutCompat>
     </androidx.cardview.widget.CardView>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/colorPrimary"/>
 </LinearLayout>
