--- a/app/src/main/res/layout/activity_code_verification.xml
+++ b/app/src/main/res/layout/activity_code_verification.xml
@@ -29,14 +29,15 @@
 
     <ProgressBar
         android:id="@+id/progress"
-        android:background="@drawable/progress"
         android:layout_width="30dp"
-        android:visibility="gone"
-        app:layout_constraintBottom_toTopOf="@id/scroll"
+        android:layout_marginTop="5dp"
+        android:layout_height="30dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/title"
+        android:background="@drawable/progress"
         android:padding="5dp"
-        android:layout_height="30dp" />
+        android:visibility="gone"/>
 
     <ScrollView
         android:id="@+id/scroll"
