--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -25,7 +25,17 @@
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
-
+    <ProgressBar
+        android:id="@+id/progress"
+        android:layout_width="30dp"
+        android:layout_marginTop="5dp"
+        android:layout_height="30dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/title"
+        android:background="@drawable/progress"
+        android:padding="5dp"
+        android:visibility="gone"/>
 
     <ScrollView
         android:id="@+id/scroll"
@@ -40,13 +50,7 @@
             android:gravity="center"
             android:orientation="vertical">
 
-            <ProgressBar
-                android:id="@+id/progress"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:background="@drawable/progress"
-                android:padding="5dp"
-                android:visibility="gone" />
+
 
             <androidx.appcompat.widget.LinearLayoutCompat
                 android:layout_width="match_parent"
