--- a/app/src/main/res/layout/activity_podcasts.xml
+++ b/app/src/main/res/layout/activity_podcasts.xml
@@ -16,6 +16,16 @@
         android:background="@drawable/progress"
         android:padding="5dp"
         android:visibility="gone" />
+    <ImageButton
+        android:id="@+id/reload"
+        android:layout_width="40dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:padding="3dp"
+        android:src="@drawable/ic_autorenew"
+        android:visibility="gone"
+        android:layout_height="40dp" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler"
