--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -17,6 +17,16 @@
         android:background="@drawable/progress"
         android:padding="5dp"
         android:visibility="gone" />
+    <ImageButton
+        android:id="@+id/reload"
+        android:layout_width="40dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:padding="3dp"
+        android:src="@drawable/ic_autorenew"
+        android:visibility="gone"
+        android:layout_height="40dp" />
     <TextView
         android:layout_width="wrap_content"
         android:id="@+id/nodocs"
@@ -28,6 +38,15 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:textColor="@color/colorPrimary"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/ic"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:textColor="@color/colorAccent"
+        android:textSize="18sp"
+        android:text="Business Documents"/>
     <ImageView
         android:id="@+id/ic"
         app:layout_constraintStart_toStartOf="parent"
