--- a/app/src/main/res/layout/activity_view_pdf.xml
+++ b/app/src/main/res/layout/activity_view_pdf.xml
@@ -1,29 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".ViewPDF">
+    <!--<com.google.android.material.appbar.AppBarLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:id="@+id/bb"-->
+        <!--android:theme="@style/AppTheme.AppBarOverlay">-->
 
-
+    <!--<androidx.appcompat.widget.Toolbar-->
+        <!--android:id="@+id/toolbar"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="?attr/actionBarSize"-->
+        <!--android:background="?attr/colorPrimary"-->
+        <!--app:popupTheme="@style/AppTheme.PopupOverlay"/>-->
+    <!--</com.google.android.material.appbar.AppBarLayout>-->
     <ProgressBar
         android:id="@+id/progress"
         android:layout_width="30dp"
-        android:layout_gravity="center"
+        android:layout_centerHorizontal="true"
         android:layout_height="30dp"
         android:visibility="gone"
         android:background="@drawable/progress"
         android:padding="5dp" />
     <androidx.appcompat.widget.AppCompatSeekBar
         android:id="@+id/seekbar"
+        android:layout_below="@id/progress"
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        android:layout_marginTop="5dp"
+        android:textColor="@color/colorPrimary"
+        android:textSize="15sp"
+        android:layout_below="@id/seekbar"/>
     <com.github.barteksc.pdfviewer.PDFView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_below="@id/seekbar"
         android:background="#9E9E9E"
         android:id="@+id/pdfviewer"/>
 
-</androidx.appcompat.widget.LinearLayoutCompat>
+</RelativeLayout>
