--- a/app/src/main/res/layout/activity_audio_player.xml
+++ b/app/src/main/res/layout/activity_audio_player.xml
@@ -4,65 +4,64 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
     android:orientation="vertical"
     android:background="@color/colorPrimary"
     tools:context=".AudioPlayer">
-    <ImageView
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:src="@drawable/ic_music"/>
-    <androidx.appcompat.widget.LinearLayoutCompat
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="12dp">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/player_position"
-            android:text="00:00"
-            android:textStyle="bold"
-            android:textColor="@color/colorWhite"/>
-        <SeekBar
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:id="@+id/seek_bar"
-            />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/player_duration"
-            android:text="00:00"
-            android:textStyle="bold"
-            android:textColor="@color/colorWhite"/>
-    </androidx.appcompat.widget.LinearLayoutCompat>
-    <androidx.appcompat.widget.LinearLayoutCompat
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="8dp">
-        <ImageView
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:id="@+id/bt_rew"
-            android:src="@drawable/ic_rew"/>
-        <ImageView
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:id="@+id/bt_play"
-            android:src="@drawable/ic_play"/>
-        <ImageView
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:id="@+id/bt_pause"
-            android:visibility="gone"
-            android:src="@drawable/ic_pause"/>
-        <ImageView
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:id="@+id/bt_ff"
-            android:src="@drawable/ic_ff"/>
-    </androidx.appcompat.widget.LinearLayoutCompat>
+    <!--<ImageView-->
+        <!--android:layout_width="50dp"-->
+        <!--android:layout_height="50dp"-->
+        <!--android:src="@drawable/ic_music"/>-->
+    <!--<androidx.appcompat.widget.LinearLayoutCompat-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:orientation="horizontal"-->
+        <!--android:padding="12dp">-->
+        <!--<TextView-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:id="@+id/player_position"-->
+            <!--android:text="00:00"-->
+            <!--android:textStyle="bold"-->
+            <!--android:textColor="@color/colorWhite"/>-->
+        <!--<SeekBar-->
+            <!--android:layout_width="0dp"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_weight="1"-->
+            <!--android:id="@+id/seek_bar"-->
+            <!--/>-->
+        <!--<TextView-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:id="@+id/player_duration"-->
+            <!--android:text="00:00"-->
+            <!--android:textStyle="bold"-->
+            <!--android:textColor="@color/colorWhite"/>-->
+    <!--</androidx.appcompat.widget.LinearLayoutCompat>-->
+    <!--<androidx.appcompat.widget.LinearLayoutCompat-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:orientation="horizontal"-->
+        <!--android:layout_marginTop="8dp">-->
+        <!--<ImageView-->
+            <!--android:layout_width="35dp"-->
+            <!--android:layout_height="35dp"-->
+            <!--android:id="@+id/bt_rew"-->
+            <!--android:src="@drawable/ic_rew"/>-->
+        <!--<ImageView-->
+            <!--android:layout_width="35dp"-->
+            <!--android:layout_height="35dp"-->
+            <!--android:id="@+id/bt_play"-->
+            <!--android:src="@drawable/ic_play"/>-->
+        <!--<ImageView-->
+            <!--android:layout_width="35dp"-->
+            <!--android:layout_height="35dp"-->
+            <!--android:id="@+id/bt_pause"-->
+            <!--android:visibility="gone"-->
+            <!--android:src="@drawable/ic_pause"/>-->
+        <!--<ImageView-->
+            <!--android:layout_width="35dp"-->
+            <!--android:layout_height="35dp"-->
+            <!--android:id="@+id/bt_ff"-->
+            <!--android:src="@drawable/ic_ff"/>-->
+    <!--</androidx.appcompat.widget.LinearLayoutCompat>-->
 </androidx.appcompat.widget.LinearLayoutCompat>
