--- a/app/src/main/res/layout/activity_videos_list.xml
+++ b/app/src/main/res/layout/activity_videos_list.xml
@@ -3,16 +3,22 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="#000"
     android:layout_height="match_parent"
+    android:background="#000"
     tools:context=".VideosList">
-    <FrameLayout
+    <!--<FrameLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_centerInParent="true"-->
+        <!--android:layout_height="wrap_content">-->
+        <!--<VideoView-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:id="@+id/videoView"/>-->
+    <!--</FrameLayout>-->
+    <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
+        android:id="@+id/youtube_player_view"
         android:layout_width="match_parent"
         android:layout_centerInParent="true"
-        android:layout_height="wrap_content">
-        <VideoView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/videoView"/>
-    </FrameLayout>
+        android:layout_height="wrap_content"/>
+
 </RelativeLayout>
