--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#ffcc00</color>
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorProg">#9C9C9C</color>
+    <color name="colorBlue">#1DA1F2</color>
 </resources>
