--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,6 +23,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_more"
+            android:onClick="showPopup"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -274,6 +275,7 @@
     </androidx.cardview.widget.CardView>
         </androidx.appcompat.widget.LinearLayoutCompat>
         </ScrollView>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
     <include layout="@layout/bottom_sheet"/>
     <include layout="@layout/bottom_details"/>
