--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -39,6 +39,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         android:textColor="@color/colorPrimary"/>
     <TextView
+        android:id="@+id/ttt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
@@ -47,6 +48,16 @@
         android:textColor="@color/colorAccent"
         android:textSize="18sp"
         android:text="Business Documents"/>
+    <TextView
+        android:id="@+id/email"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/ttt"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:textColor="@color/colorAccent"
+        android:textSize="12sp"
+        android:text="email"/>
     <ImageView
         android:id="@+id/ic"
         app:layout_constraintStart_toStartOf="parent"
@@ -56,19 +67,12 @@
         android:src="@drawable/icon"/>
     <ImageView
         android:id="@+id/settings"
-        android:layout_width="30dp"
+        android:layout_width="25dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:src="@drawable/ic_settings"
-        android:layout_height="30dp" />
-    <ImageView
-        android:id="@+id/logout"
-        android:layout_width="30dp"
-        android:layout_marginTop="5dp"
-        app:layout_constraintTop_toBottomOf="@id/settings"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:src="@drawable/ic_power"
-        android:layout_height="30dp" />
+        android:layout_height="25dp" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler"
         android:layout_width="match_parent"
