--- a/app/src/main/res/layout/activity_podcasts.xml
+++ b/app/src/main/res/layout/activity_podcasts.xml
@@ -31,7 +31,16 @@
         android:id="@+id/recycler"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginBottom="53dp"
         android:padding="5dp"/>
+    <LinearLayout
+        android:id="@+id/banner_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        />
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
