--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -275,8 +275,14 @@
     </androidx.cardview.widget.CardView>
         </androidx.appcompat.widget.LinearLayoutCompat>
         </ScrollView>
-
+        <LinearLayout
+            android:id="@+id/banner_container"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toBottomOf="parent"
+            />
     </androidx.constraintlayout.widget.ConstraintLayout>
     <include layout="@layout/bottom_sheet"/>
-    <include layout="@layout/bottom_details"/>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
