--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -79,5 +79,14 @@
         android:layout_height="match_parent"
         android:padding="5dp"
         android:layout_marginTop="218dp"
+        android:layout_marginBottom="53dp"
         app:layout_constraintTop_toBottomOf="@id/ic"/>
+    <LinearLayout
+        android:id="@+id/banner_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
