--- a/app/src/main/res/layout/activity_videos_list.xml
+++ b/app/src/main/res/layout/activity_videos_list.xml
@@ -20,5 +20,12 @@
         android:layout_width="match_parent"
         android:layout_centerInParent="true"
         android:layout_height="wrap_content"/>
+    <LinearLayout
+        android:id="@+id/banner_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:orientation="vertical"
+        />
 
 </RelativeLayout>
