--- a/app/src/main/res/layout/activity_view_pdf.xml
+++ b/app/src/main/res/layout/activity_view_pdf.xml
@@ -45,7 +45,15 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/seekbar"
+        android:layout_marginBottom="53dp"
         android:background="#9E9E9E"
         android:id="@+id/pdfviewer"/>
-
+    <LinearLayout
+        android:id="@+id/banner_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        />
 </RelativeLayout>
