--- a/app/src/main/res/layout/bottom_sheet.xml
+++ b/app/src/main/res/layout/bottom_sheet.xml
@@ -7,6 +7,7 @@
     app:layout_behavior="@string/bottom_sheet_behavior"
     app:behavior_hideable="true"
     android:padding="20dp"
+    android:layout_marginBottom="60dp"
     android:background="@drawable/bottomsheet"
     app:behavior_peekHeight="0dp"
     android:layout_height="wrap_content">
